--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Biography</h2>
         <p>
             I received my B.S. degree with the honor of Outstanding Graduate from Xi'an Jiaotong University in 2020. <br>
-            Currently I am a PhD student of <a href="http://www.aiar.xjtu.edu.cn/">Institute of Artificial Intelligence and Robotics</a> and major in Control Science and Engineering from Xi'an Jiaotong University.
+            Currently I am a PhD student of <a href="http://www.aiar.xjtu.edu.cn/">Institute of Artificial Intelligence and Robotics</a> and major in Control Science and Engineering at Xi'an Jiaotong University.
             I am supervised by Prof. <a href="https://gr.xjtu.edu.cn/en/web/dushaoyi">Shaoyi Du</a> .
         </p>
 
