--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             </div>
         </div>
     </div>
+    <div align="center"> <img src="https://profile-counter.glitch.me/yaorz97/count.svg" /> </div>
 
 
 </body>
