--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         <br><br>Email: yao475917560@stu.xjtu.edu.cn | rzy20106@163.com
             <br><br> Address: Institute of Artificial Intelligence and Robotics, Xi'an Jiaotong University, 28 Xianning West road, Beilin District, Xi'an， 710049, China
         (陕西省西安市碑林区咸宁西路28号, 西安交通大学, 人工智能与机器人研究所, 710049.)</p>
-        <a href="https://info.flagcounter.com/p70p"><img src="https://s11.flagcounter.com/map/p70p/size_s/txt_000000/border_CCCCCC/pageviews_1/viewers_0/flags_0/" alt="Flag Counter" border="0"></a>
 
         <!-- 更新时间 -->
         <div id="footer">
+            <div align="center"> <img src="https://profile-counter.glitch.me/yang-tian-hub/count.svg" /> </div>
             <div id="footer-text">
                 Page updated on 2024.07.22.
             </div>
