--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             <li><strong>PHFormer: Multi-Fragment Assembly Using Proxy-Level Hybrid Transformer</strong>.<br />
             Wenting Cui, <strong>Runzhao Yao </strong>, Shaoyi Du<br />
             <em>Proceedings of the AAAI Conference on Artificial Intelligence (AAAI) </em>,  <em>2024</em><br />
-            [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/27905" target="_blank">paper</a>]</li>
+            [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/27905" target="_blank">paper</a>]
+            [<a href="https://github.com/521piglet/PHFormer" target="_blank">code</a>]</li>
 
             <li><strong>RDD: Learning Reinforced 3D Detectors and Descriptors Based on Policy Gradient</strong>.<br />
             Wenting Cui, Shaoyi Du, <strong>Runzhao Yao </strong>, Canhui Tang, Aixue Ye, Feng Wen, Zhiqiang Tian<br />
